--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,10 @@ django-cors-headers==4.7.0
 django-rest-framework==0.1.0
 django-storages==1.14.5
 djangorestframework==3.16.0
+djangorestframework_simplejwt==5.5.0
 jmespath==1.0.1
 pillow==11.1.0
+PyJWT==2.9.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 s3transfer==0.11.4
